2007-05-08 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCpeeph.c (labelIsUncondJump): ignore identical labels for
	  jumps to self, fixed bug 1717281

2007-05-10 Borut Razem <borut.razem AT siol.net>

	* support/scripts/gen_known_bugs.pl: cosmetic fix
	* doc/knownbugs.html: generated by gen_known_bugs.pl

2007-05-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (createFunction): also generate non-inlined version of
	  function for functions declared as "static inline"
	* src/SDCCast.c (fixupInline, inlineAddDecl): reset symbol state so
	  function can be inlined after non-inlined version generated.

2007-05-10 Borut Razem <borut.razem AT siol.net>

	* support/scripts/gen_known_bugs.pl: added script
	  which generates knownbugs.html

2007-05-09 Maarten Brock <sourceforge.brock AT dse.nl>

	* doc/knownbugs.html: updated for release 2.7.0

2007-05-09 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>

	* device/include/mcs51/uPSD33xx.h: Added patch by Jan Waclawek.

2007-05-08 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/gen.c (emitcode): don't change properties of previous lines,
	  (throughout): updated generating comments
	* src/mcs51/gen.c (emitcode): don't change properties of previous lines,
	  (throughout): updated generating comments
	* src/SDCCpeeph.c (peepHole): continue searching at the first replaced
	  rule instead of at the second, or it might skip lines when removing the
	  complete match
	* support/regression/tests/bug1714204.c: changed test to foo

2007-05-08 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx: changed sdcc version to 2.7.0,
	  thanks to SDCC Distributed Compile Farm members,
	  added Z80 and GBZ80 command line options
	* .version, doc/INSTALL.txt, sdcc.spec: changed sdcc version to 2.7.0

2007-05-08 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/mcs51/crtxinit.asm: added disabled version for dual dptr
	* device/include/mcs51/uPSD33xx.h: added sfr DPS as alias for DPTC